--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
+    "jQuery": "^1.7.4",
     "jsonwebtoken": "^7.4.2",
     "mongodb": "^2.2.31",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "randomstring": "*"
+    "randomstring": "*",
+    "serve-favicon": "~2.4.2"
   }
 }
